# ddbox-remote

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  requirements.txt  sample.ipynb  tutorial.ipynb  vina.pdbqt
ddbox_remote/: configs.py  submissions.py  utils.py
ddbox_remote/data/: torch.py
ddbox_remote/data/utils/: loaders.py
