[tool.poetry]
name = "ddbox-remote"
version = "0.1.0"
description = ""
authors = ["Azamat <unawares15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "1.26.15"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = "^0.82.0"
pre-commit = "^2.20.0"
gunicorn = {extras = ["standard"], version = "^20.1.0"}
pandas = "^2.0.1"
requests = "^2.30.0"
rdkit = "^2023.3.1"
tqdm = "^4.65.0"
python-dotenv = "^1.0.0"
python-environ = "^0.4.54"
sqlalchemy = "^2.0.15"
psycopg2-binary = "^2.9.6"
fcd-torch = "^1.0.7"
celery = "^5.3.0"
flower = "^1.2.0"
gevent = "^22.10.2"
redis = "^4.5.5"
minio = "^7.1.15"
openbabel = "^3.1.1.1"
fastapi-cache2 = "^0.2.1"
cryptography = "^41.0.2"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
