[tool.poetry]
name = "ddbox-remote"
version = "0.1.0"
description = ""
authors = ["Azamat <unawares15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "1.26.15"
pre-commit = "^2.20.0"
requests = "^2.30.0"
tqdm = "^4.65.0"
torch = "^2.0.1"
cryptography = "^41.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
